# ubuntu-image-builder

./: .gitignore  LICENSE  README.md  build-image.sh
generic-image-builder/: Cargo.toml
generic-image-builder/src/: lib.rs  shell_commands.rs
tests/: image-config.yaml
tests/content/scripts/: hello.sh
tests/content/skel/etc/netplan/: net1.yaml
tests/content/skel/var/snapd/seed/: seed.yaml
tests/test-package/: Cargo.toml
